# med_diagnostic_site

./:  .dockerignore  .coveragerc  .env.sample  Dockerfile  README.md  docker-compose.yml  initial_doctors.json  pyproject.toml  requiments.txt  requirements.txt  services.json
config/: settings.py  urls.py
medsite/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
medsite/migrations/: 0001_initial.py  0002_initial.py  0003_remove_appointment_appointment_datetime_and_more.py  0004_remove_service_duration_service_duration_minutes.py  0005_alter_appointment_reason.py  0006_feedback.py  0007_appointment_diagnosis_appointment_notes_and_more.py  0008_alter_appointment_patient.py  0009_diagnosis_results.py  0010_remove_patient_address_remove_patient_blood_group_and_more.py  0011_rename_birth_date_patient_birth_day.py  0012_rename_diagnosis_appointment_diagnosis_text.py  0014_alter_appointment_appointment_date.py  0015_remove_diagnosis_results_remove_diagnosis_updated_at_and_more.py  0016_alter_diagnosis_appointment_alter_diagnosis_patient.py  0017_rename_diagnosis_text_diagnosis_description_and_more.py  0018_rename_diagnosis_text_appointment_description.py  0019_alter_appointment_patient_alter_doctor_user.py  0020_alter_appointment_doctor_alter_appointment_patient_and_more.py  0021_alter_appointment_doctor.py  0022_remove_appointment_reason_appointment_diagnoses_and_more.py  (+4 more)
tests/: test_ASGI.py  test_import_services.py  test_load_doctors.py  test_medsite_forms.py  test_medsite_models.py  test_medsite_urls.py  test_medsite_views.py  test_users_forms.py  test_users_signals.py  test_users_views.py
users/: admin.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
(+43 files in other folders)
