[project]
name = "med-diagnostic-site"
version = "0.1.0"
description = ""
authors = [
    {name = "Dmitriy",email = "dm.tsiganov@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "pillow (>=11.3.0,<12.0.0)",
    "django-bootstrap4 (>=25.2,<26.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "load-dotenv (>=0.1.0,<0.2.0)",
    "django-widget-tweaks (>=1.5.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"

