[tool.poetry]
name = "med-diagnostic-site"
version = "0.1.0"
description = "Медицинский диагностический сайт"
authors = ["Dmitriy <dm.tsiganov@gmail.com>"]
packages = [{ include = "med_diagnostic_site" }]  # Укажите вашу корневую директорию проекта

[tool.poetry.dependencies]
python = ">=3.12"
django = ">=5.2.5,<6.0.0"
pillow = ">=11.3.0,<12.0.0"
python-dotenv =  ">=0.13.0,<1.0.0"
django-widget-tweaks = ">=1.5.0,<2.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
celery = ">=5.5.3,<6.0.0"
pytest = ">=8.4.1,<9.0.0"
django-bootstrap5 = ">=25.2,<26.0"
typing-extensions = ">=4.14.1,<5.0.0"
djangorestframework = "^3.14.0"
coverage = ">=7.10.5,<8.0.0"
requests = "==2.32.4"
docker = ">=7.1.0,<8.0.0"
docker-compose = "2.38.2"
pyyaml = ">=3.10,<6"

[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

